# plan-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  TODOs.md  mypy.ini  pyproject.toml  pytest.ini  release-please-config.json  ruff.toml
.cursor/: mcp.json
.cursor/rules/: focused-development.mdc  project-management.mdc
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dco.yml  dependency-review.yml  release-please.yml  release.yml
dev/mcp-inspector/: README.md  mcp.json
docs/: agent-usage-guide.md  architecture.md  config_reference.md  contributing.md  langgraph.md  production_readiness_plan_0.7.0.md  project_workflow.md  quickstart_agents.md  refactor-proposal.md  release_checklist.md  triage_guide.md  usage_guide_agents.md  v1-target.md  work-items-architecture.md
scripts/: anchor-release.sh
src/plan_manager/: __init__.py  __main__.py  archive.py  config.py  list_tasks.py  logging.py  logging_config.py  logging_context.py  mcp_server.py  plan.py  plan_utils.py  server.py  show_task.py  stories.py  stories_utils.py  story.py  story_model.py  story_utils.py  tasks.py  telemetry.py  update_task_status.py  validation.py
src/plan_manager/domain/: __init__.py  models.py  validation.py
src/plan_manager/io/: __init__.py  file_mirror.py  files.py  paths.py
src/plan_manager/prompts/: __init__.py  plan_prompts.py  prompt_register.py  prompts_register.py  propose_prompts.py  story_prompts.py  task_prompts.py  workflow_prompts.py
src/plan_manager/resources/: usage_resources.py
src/plan_manager/schemas/: inputs.py  outputs.py  prompts.py
src/plan_manager/server/: __init__.py  app.py  browser.py
src/plan_manager/services/: __init__.py  activity_repository.py  approval_service.py  backlog_service.py  changelog_service.py  plan_repository.py  plan_service.py  report_service.py  shared.py  state_repository.py  status.py  status_service.py  status_utils.py  story_service.py  task_service.py
src/plan_manager/tools/: __init__.py  approval_tools.py  backlog_tools.py  changelog_tools.py  context_tools.py  plan_tools.py  report_tools.py  status_tools.py  story_tools.py  task_tools.py  util.py
tests/: conftest.py
tests/integration/: test_request_pr_changes.py  test_story_tools.py  test_task_execution_workflow.py  test_transport_security.py
tests/unit/: test_changelog_service.py  test_config.py  test_domain_models.py  test_plan_repository.py  test_shared.py  test_status_utils.py  test_telemetry.py  test_validation.py
